# tuc-archive

./: .env.example  .gitattributes  .gitignore  AUTHORS  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: test_auth.py  test_categories.py  test_e2e.py  test_embed.py  test_parser.py  test_state.py  test_url.py  test_zim.py
tests/fixtures/: forum_logged_in.html  forum_root.html  login_form.html  topic.html
tuc_archive/: __init__.py  auth.py  cli.py  config.py  crawler.py  dashboard.py  discovery.py  parser.py  rewrite.py  state.py  store.py  utils.py  zim.py
tuc_archive/distributed/: __init__.py  coordinator.py  worker.py
