[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuc-archive"
version = "0.1.0"
description = "Archive a login-protected TYPO3 (tx_tucforum) forum into an offline Kiwix ZIM file."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Soteria" }]
keywords = ["typo3", "tucforum", "zim", "kiwix", "archive", "crawler"]

dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "zimscraperlib>=5.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# Distributed coordinator/worker REST API.
distributed = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Optional web dashboard (re-uses the FastAPI stack).
dashboard = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
tuc-archive = "tuc_archive.cli:app"
tuc-archive-dashboard = "tuc_archive.dashboard:main"

[tool.setuptools.packages.find]
include = ["tuc_archive*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
